server/kubernetes/templates/deployment.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ${PROJECT_NAME}
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ${PROJECT_NAME}
    spec:
      containers:
      - image: ${IMAGE}
        imagePullPolicy: Always
        name: ${PROJECT_NAME}
        ports:
        - containerPort: 80
