server/kubernetes/templates/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${PROJECT_NAME}
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
  - hosts:
    - ${VIRTUAL_HOST}
    secretName: ${PROJECT_NAME}-tls
  rules:
  - host: ${VIRTUAL_HOST}
    http:
      paths:
      - path: /
        backend:
          serviceName: ${PROJECT_NAME}
          servicePort: 80
      - path: /*
        backend:
          serviceName: ${PROJECT_NAME}
          servicePort: 80
